--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "devDependencies": {
     "@eslint/json": "^0.9.1",
     "@types/react": "^18.3.18",
-    "typescript-eslint": "^8.20.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.4",
@@ -21,6 +20,8 @@
     "eslint-plugin-yml": "^1.16.0",
     "prettier": "^3.4.2",
     "react": "^18.3.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
+    "vanilla-cookieconsent": "^3.1.0"
   }
 }
